--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -12,7 +12,7 @@
 
 .reservation__title {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
   text-align: center;
   margin: 0;
   font-style: normal;
